# RobotArmPJ

./: README.md  dir_structure.txt
Arduino/: README.md  README_about_arduino_setting_up.md  dir_structure.txt  host_setup.sh  intelligence_setting.md  platformio.ini
Arduino/src/: A_RobotArm.txt  Arduino.ino
Arduino/src/arm/: CommandParser.cpp  CommandParser.h  Config.h  README.md  RobotArm.cpp  RobotArm.h  ServoController.cpp  ServoController.h
Arduino/src/camera/: README.md
ai-models/object-detection/yolov5/: atbout_images_labels_indir.md  colab_finetune_complete_steps.md  extract_label_from_image.md  fine_tune_steps.md  prepare_finetune_dataset.md  (+1 more)
docs/prd/: getting_started.md
raspberrypi/: README.md  caliblation.md  config.py  init.sh  main.py  memo_readme.md  pyproject.toml  setup-arduino.md  yolov5_fine_tuning_connect_sys.md
raspberrypi/src/core/: orchestrator.py  real_time_control.py
raspberrypi/src/hardware/: arduino_com.py  audio.py  camera.py  ir_sensor.py
raspberrypi/src/processing/: kinematics.py  llm_parser.py
setup_programs/: get_finetune_seed_images.py
setup_programs/test_integrated_sys/: Integrated_Control.ino  app.py  arduino_com.py  deploy_integrated.sh  deprecated_Integrated_Control.ino  main.py  orchestrator_process.py  real_time_control_process.py
setup_programs/test_irsensor_camera/: arduino_com.py  deploy_to_raspberrypi_arduino.sh  ir_sensor.py  real_time_gui.py
setup_programs/test_servo_180_0/: Temp_Servo_Test.ino  deploy.sh  deploy_to_uno.sh  test_servo.py  usage_test_shell_command.md
temp_ir_build/: temp_ir_build.ino
(+121 files in other folders)
